--- a/client/.gitignore
+++ b/client/.gitignore
@@ -12,6 +12,12 @@ dist
 dist-ssr
 *.local
 
+# Environment variables (CRITICAL - NEVER COMMIT)
+.env
+.env.*
+!.env.example
+*.env
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
