--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,10 @@ name = "python-template"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
+package-mode = false
 
 [tool.poetry.dependencies]
-python = ">=3.10.0,<3.11"
+python = ">=3.10.0,<3.13"
 google-generativeai = "^0.3.1"
 xds-protos = "^1.60.0"
 markdown = "^3.10"
