--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ fastapi = "^0.124.0"
 uvicorn = "^0.38.0"
 python-multipart = "^0.0.20"
 litellm = "^1.80.8"
+pydantic-settings = "^2.12.0"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
