--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ uvicorn = "^0.38.0"
 python-multipart = "^0.0.20"
 litellm = "^1.80.8"
 pydantic-settings = "^2.12.0"
+prometheus-client = "^0.23.1"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
