fix: Phase 16.2 partial - Fix integration test configuration
- Fixed syntax error in testing.py (escaped quotes removed)
- Registered 'integration' pytest marker to eliminate warnings
- Integration tests now collect properly (175 tests)
- Zero pytest collection warnings

Note: Integration tests require DATABASE_URL environment variable to run.
Test collection verified, execution requires database setup.

Phase 16.2 PARTIALLY COMPLETE (collection fixed, execution needs DB)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,10 @@ ignore = ['W291', 'W292', 'W293']
 testpaths = ["tests"]
 # Don't collect tests from source code directories - include defaults
 norecursedirs = [".*", "src", "client", "node_modules", "__pycache__", "build", "dist", "venv", "*.egg"]
+# Register custom markers
+markers = [
+    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
+]
 # Filter collection and runtime warnings
 filterwarnings = [
     "ignore::DeprecationWarning",
