feat: Phase 17.1 - DocumentGroup domain layer + E2E tests + auth fixes
Domain Layer (Phase 17.1):
- Add DocumentGroup aggregate with event sourcing
- Add 8 domain events for group lifecycle
- Add GroupStatus value object
- Add document group exceptions
- 29 comprehensive unit tests (100% passing)

E2E Testing:
- Add E2E test suite for document upload flow
- 4 E2E tests covering complete workflow
- Fixed User aggregate UUID issues
- Fixed authentication 500 errors

Authentication Fixes:
- Fix User aggregate to use UUID for all events
- Fix repository.get_by_id() → get() method calls
- Add default VIEWER role to new users
- Fix dev mode auth bypass

Documentation:
- Add Phase 17 to implementation plan
- Add comprehensive setup documentation
- Add dev mode banner to frontend

Infrastructure:
- Add test data loader for dev mode
- Update event serializer for User events
- Fix event store payload enrichment

--- a/.env.example
+++ b/.env.example
@@ -149,3 +149,30 @@ HOT_RELOAD=true
 
 # Enable API documentation
 ENABLE_DOCS=true
+
+# ============================================================================
+# LOCAL DEVELOPMENT AUTH BYPASS (Development only)
+# ============================================================================
+# See: docs/decisions/023-local-development-auth-bypass.md
+#
+# When DEV_AUTH_BYPASS=true (DEVELOPMENT ONLY):
+# - Backend accepts requests without auth headers
+# - All unauthenticated requests auto-inject test user
+# - Test documents automatically loaded on startup
+# - WARNING banner displayed in logs and frontend
+#
+# SECURITY: This setting is BLOCKED in production by validation
+#
+# Default test user credentials (Kerberos ID must be exactly 6 characters):
+DEV_AUTH_BYPASS=true
+DEV_TEST_USER_KERBEROS=devusr
+DEV_TEST_USER_NAME=Dev User
+DEV_TEST_USER_EMAIL=devuser@local.dev
+DEV_TEST_USER_GROUPS=testing,document_upload,analysis_read
+
+# To customize the test user, override any of the above settings:
+# NOTE: Kerberos ID must be exactly 6 characters (e.g., abc123, jsmith, etc.)
+# DEV_TEST_USER_KERBEROS=jsmith
+# DEV_TEST_USER_NAME=John Smith
+# DEV_TEST_USER_EMAIL=jsmith@example.com
+# DEV_TEST_USER_GROUPS=admin,testing
